--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,5 @@
+require: rubocop-rspec
+
 AllCops:
   TargetRubyVersion: 3.1.2
   NewCops: enable
@@ -20,6 +22,21 @@ Lint/EmptyBlock:
 Metrics/BlockLength:
   Exclude:
    - spec/**/*
+
+RSpec/BeNil:
+  EnforcedStyle: be
+
+RSpec/ExampleLength:
+  Max: 10
+
+RSpec/HookArgument:
+  EnforcedStyle: example
+
+RSpec/MessageSpies:
+  EnforcedStyle: receive
+
+RSpec/MultipleExpectations:
+  Max: 5
 
 Style/BlockDelimiters:
   EnforcedStyle: braces_for_chaining
