--- a/example/open_ai_bot/Gemfile
+++ b/example/open_ai_bot/Gemfile
@@ -1,9 +1,9 @@
 # frozen_string_literal: true
 
-source "https://rubygems.org"
+source 'https://rubygems.org'
 
-gem "down", "~> 5.4"
-gem "http", "~> 5.1"
-gem "pry", "~> 0.14.2"
-gem "rubydium", ">= 0.2.3"
-gem "ruby-openai", "~> 5.1"
+gem 'down', '~> 5.4'
+gem 'http', '~> 5.1'
+gem 'pry', '~> 0.14.2'
+gem 'rubydium', '>= 0.2.3'
+gem 'ruby-openai', '~> 5.1'
